--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -23,7 +23,7 @@
   }
 
   #portrait {
-    margin: 0 -2em -0.1em;
+    margin: 0 -2em 0;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -36,7 +36,8 @@
   }
 
   &.alt {
-    @include padding(0, 5em, (6em, 0, 0, 0));
+    @include padding(6em, 5em, (1em, 0, 0, 0));
+    padding-bottom: 0 !important;
 
     h1 {
       font-size: 3.25em;
@@ -69,7 +70,7 @@
     @include padding(4em, 4em, (0, 0, -2em, 0));
 
     &.alt {
-      @include padding(0, 4em, (6em, 0, 0, 0));
+      @include padding(5em, 4em, (1em, 0, 0, 0));
     }
   }
 
@@ -77,7 +78,7 @@
     @include padding(4em, 3em, (0, 0, -2em, 0));
 
     &.alt {
-      @include padding(0, 3em, (5em, 0, 0, 0));
+      @include padding(4em, 3em, (1em, 0, 0, 0));
     }
   }
 
@@ -90,7 +91,7 @@
     }
 
     &.alt {
-      @include padding(0, 2em, (4em, 0, 0, 0));
+      @include padding(3em, 2em, (1em, 0, 0, 0));
 
       h1 {
         font-size: 2.5em;
@@ -113,16 +114,4 @@
       @include padding(2.5em, 1em, (1em, 0, 0, 0));
     }
   }
-
-  //body.is-preload & {
-  //  &.alt {
-  //    > * {
-  //      opacity: 0;
-  //    }
-  //
-  //    .logo {
-  //      @include vendor('transform', 'scale(0.8) rotate(-30deg)');
-  //    }
-  //  }
-  //}
 }
