--- a/assets/sass/components/_slider.scss
+++ b/assets/sass/components/_slider.scss
@@ -9,12 +9,15 @@
     display: block;
     width: 100%;
     height: 100%;
-    top: -100%;
-    left: -100%;
+    top: -200%;
+    left: -200%;
 
     background-position: center;
     background-size: cover;
-    will-change: left, top;
+    will-change: left, top, transform;
+
+    transform: scale(1);
+    transition: transform .3s ease-in-out;
 
     //animation-name: slideIn-left;
     animation-duration: .7s;
