--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -9,6 +9,15 @@
   @include padding(5em, 5em, (0, 0, -2em, 0));
   text-align: center;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 4.25em);
+  @include breakpoint('<=large') {
+    min-height: calc(100vh - 5em);
+  }
+  @include breakpoint('<=small') {
+    min-height: auto;
+  }
 
   h1 {
     font-weight: bolder;
@@ -21,10 +30,13 @@
     font-weight: bolder;
     text-shadow: 2px 2px 3px black;
     letter-spacing: _font(letter-spacing);
+    &.flex-1 {
+      flex: 1;
+    }
   }
 
   #portrait {
-    margin: 0 -2em 0;
+    //margin: 0 -2em 0;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
