--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -49,6 +49,7 @@
 
 // Component.
 
+@import 'components/loader';
 @import 'components/row';
 @import 'components/box';
 @import 'components/button';
