Fixes IE flex: 1 bug

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -24,7 +24,7 @@
     text-shadow: 2px 2px 3px black;
     letter-spacing: _font(letter-spacing);
     &.flex-1 {
-      flex: 1;
+      flex: 1 1 auto;
     }
   }
 
