--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -44,7 +44,7 @@
   }
 
   ul {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     list-style: none;
 
@@ -85,12 +85,29 @@
   }
 
   &.sticky {
-    //position: fixed;
-    //top: 0;
     padding: 0.5em 1em;
     background-color: transparentize(_palette(invert, bg-alt), 0.05);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+
+    // IE10+11 Fix
+    @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      &:before {
+        content: '';
+        display: block;
+        width: 100%;
+        flex: 1 1 auto;
+      }
+      + section:before {
+        content: '';
+        display: block;
+        height: 4.25em;
+        width: 100%;
+      }
+    }
 
     ul {
       li {
@@ -132,7 +149,7 @@
   @include breakpoint('<=small') {
     padding: 1em .35em;
     ul li a {
-      padding: 0 0.75em;
+      padding: 0 0.6em;
     }
   }
   @include breakpoint('<=xsmall') {
@@ -140,7 +157,7 @@
     ul {
       li {
         a {
-          padding: 0 0.5em;
+          padding: 0 0.4em;
         }
       }
     }
