--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -14,7 +14,7 @@ $size: (
   border-radius-main: 0.25em,
   element-height: 2.75em,
   element-margin: 2em,
-  inner: 64em
+  inner: 64rem
 );
 
 // Font.
