--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -46,8 +46,8 @@
   &.alt {
     @include padding(5em, 0, (1em, 0, 0, 0));
     padding-bottom: 0 !important;
-    min-height: calc(100vh - 6.25rem);
-    @include breakpoint('<=xlarge') {
+    min-height: calc(100vh - 4.25rem);
+    @include breakpoint('<=large') {
       min-height: calc(100vh - 5rem);
     }
     @include breakpoint('<=small') {
