Introduces html generation with sergey

--- a/templates/rechtliche-hinweise.html
+++ b/templates/rechtliche-hinweise.html
@@ -7,16 +7,8 @@
 <html>
 <head>
   <title>Generic - Stellar by HTML5 UP</title>
-  <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-<meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
-<link rel="stylesheet" href="assets/css/main.min.css"/>
-<noscript>
-  <link rel="stylesheet" href="assets/css/noscript.min.css"/>
-</noscript>
-
+  <sergey-import src="meta" />
+  <sergey-import src="styles" />
 </head>
 <body>
 
@@ -89,43 +81,11 @@
 
   </div>
 
-  <!-- Footer -->
-<footer id="footer">
-  <!-- @see https://www.gesetze-im-internet.de/tmg/__5.html -->
-  <!-- @see https://www.haid-architektur.com/profil/berufsrechtliche-angaben -->
-  <section>
-    <h2>Impressum</h2>
-    <p>Verantwortlich im Sinne des TMG §5</p>
-    <p>Stefan Link<br/>
-      Architekt in der <a href="https://www.akbw.de/" target="_blank">Architektenkammer BW</a><br>
-      USt-IdNr: <i>hier einsetzen!</i>
-    </p>
-  </section>
-  <section>
-    <div class="h2 hidden-small-down">&nbsp;</div>
-    <dl class="alt">
-      <dt>Anschrift</dt>
-      <dd>Manosquer Straße 11/2<br>70771 Leinfelden-Echterdingen</dd>
-      <dt>Telefon</dt>
-      <dd><a href="tel:+497117541149">0711 / 7 54 11 49</a></dd>
-      <dt>E-Mail</dt>
-      <dd><a href="mailto:info@stefan-link.de">info@stefan-link.de</a></dd>
-    </dl>
-  </section>
-  <div>
-    <ul class="actions">
-      <li><a href="rechtliche-hinweise.html" class="button">Rechtliche Hinweise</a></li>
-    </ul>
-  </div>
-  <p class="copyright">&copy;Stefan Link 2021-heute. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-</footer>
-
+  <sergey-import src="footer" />
 
 </div>
 
-<!-- Scripts -->
-<script src="assets/js/main.min.js"></script>
-
+<sergey-import src="scripts" />
 
 </body>
 </html>
