--- a/templates/elements.html
+++ b/templates/elements.html
@@ -7,16 +7,8 @@
 <html>
 <head>
   <title>Elements - Stellar by HTML5 UP</title>
-  <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-<meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
-<link rel="stylesheet" href="assets/css/main.min.css"/>
-<noscript>
-  <link rel="stylesheet" href="assets/css/noscript.min.css"/>
-</noscript>
-
+  <sergey-import src="meta" />
+  <sergey-import src="styles" />
 </head>
 <body class="is-preload">
 
@@ -418,9 +410,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 </div>
 
-<!-- Scripts -->
-<script src="assets/js/main.min.js"></script>
-
+<sergey-import src="scripts" />
 
 </body>
 </html>
