--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
+@import 'libs/browser-hacks';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
