--- a/assets/sass/layout/_backdrop.scss
+++ b/assets/sass/layout/_backdrop.scss
@@ -1,7 +1,20 @@
+html {
+  @include browser-hack('ie11') {
+    body, body.x {
+      display: none;
+    }
+  }
+}
+
 #backdrop {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  $border-bottom-size: 1px;
+  height: calc(100% + $nav-height - $border-bottom-size);
   min-height: 100vh;
+  box-sizing: content-box;
   z-index: -1;
   pointer-events: none;
   user-select: none;
@@ -11,9 +24,18 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  border-bottom: solid 1px _palette(invert, border);
   filter: saturate(1);
   transition: filter 1.5s ease-out;
+  //border-bottom: solid 1px _palette(invert, border);
+  border-bottom: solid 1px _palette(invert, bg);
+
+  // Scaling copied from _nav.scss
+  @include breakpoint('<=large') {
+    font-size: 1.15em;
+  }
+  @include breakpoint('<=xsmall') {
+    font-size: 1em;
+  }
 
   &.is-preload {
     filter: saturate(0);
@@ -22,8 +44,17 @@
   img {
     display: block;
     width: 100%;
-    height: auto;
-    visibility: hidden;
+    height: 100%;
+    object-fit: cover;
+
+    @include browser-hack(ie10-11 edge12-15) {
+      height: auto;
+      visibility: hidden;
+    }
+  }
+
+  @supports (object-fit: cover) {
+    background: none !important;
   }
 
   &:after {
@@ -33,6 +64,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.35),rgba(0,0,0,0.35));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35));
   }
 }
