--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -151,6 +151,7 @@
 
   &.left {
     text-align: left;
+    margin: 0;
     padding-left: 5em;
     @include breakpoint('<=large') {
       padding-left: 4em;
