--- a/assets/sass/components/_statistics.scss
+++ b/assets/sass/components/_statistics.scss
@@ -92,7 +92,7 @@
         }
       }
       &:hover .slider > span {
-        transform: scale(1.1);
+        //transform: scale(1.1);
       }
 
       .legend {
