--- a/assets/sass/components/_slider.scss
+++ b/assets/sass/components/_slider.scss
@@ -9,28 +9,32 @@
     display: block;
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    //top: -200%;
-    //left: -200%;
+    top: -200%;
+    left: -200%;
 
     background-position: center;
     background-size: cover;
     will-change: left, top, transform;
 
-    //transform: scale(1);
-    transform: translate(-100%, -100%);
+    transform: scale(1);
     transition: transform .3s ease-in-out;
 
-    //animation-name: slideIn-left;
     animation-duration: .7s;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
 
+    @media (hover: none) {
+      top: 0;
+      left: 0;
+      transform: translate(-100%, -100%);
+    }
+
     &:first-child {
-      transform: translate(0, 0);
-      //top: 0;
-      //left: 0;
+      top: 0;
+      left: 0;
+      @media (hover: none) {
+        transform: translate(0, 0);
+      }
     }
   }
 
@@ -49,73 +53,75 @@
 
 @keyframes slideIn-left {
   from {
-    transform: translate(-100%, 0);
+    top: 0;
+    left: -100%;
   }
   to {
-    transform: translate(0, 0);
+    top: 0;
+    left: 0;
   }
 }
 @keyframes slideIn-right {
   from {
-    transform: translate(100%, 0);
+    top: 0;
+    left: 100%;
   }
   to {
-    transform: translate(0, 0);
+    top: 0;
+    left: 0;
   }
 }
 @keyframes slideIn-up {
   from {
-    transform: translate(0, 100%);
+    top: 100%;
+    left: 0;
   }
   to {
-    transform: translate(0, 0);
+    top: 0;
+    left: 0;
   }
 }
 @keyframes slideIn-down {
   from {
-    transform: translate(0, -100%);
+    top: -100%;
+    left: 0;
   }
   to {
-    transform: translate(0, 0);
+    top: 0;
+    left: 0;
   }
 }
-//@keyframes slideIn-left {
-//  from {
-//    top: 0;
-//    left: -100%;
-//  }
-//  to {
-//    top: 0;
-//    left: 0;
-//  }
-//}
-//@keyframes slideIn-right {
-//  from {
-//    top: 0;
-//    left: 100%;
-//  }
-//  to {
-//    top: 0;
-//    left: 0;
-//  }
-//}
-//@keyframes slideIn-up {
-//  from {
-//    top: 100%;
-//    left: 0;
-//  }
-//  to {
-//    top: 0;
-//    left: 0;
-//  }
-//}
-//@keyframes slideIn-down {
-//  from {
-//    top: -100%;
-//    left: 0;
-//  }
-//  to {
-//    top: 0;
-//    left: 0;
-//  }
-//}
+@media (hover: none) {
+  @keyframes slideIn-left {
+    from {
+      transform: translate(-100%, 0);
+    }
+    to {
+      transform: translate(0, 0);
+    }
+  }
+  @keyframes slideIn-right {
+    from {
+      transform: translate(100%, 0);
+    }
+    to {
+      transform: translate(0, 0);
+    }
+  }
+  @keyframes slideIn-up {
+    from {
+      transform: translate(0, 100%);
+    }
+    to {
+      transform: translate(0, 0);
+    }
+  }
+  @keyframes slideIn-down {
+    from {
+      transform: translate(0, -100%);
+    }
+    to {
+      transform: translate(0, 0);
+    }
+  }
+}
