--- a/assets/sass/components/_statistics.scss
+++ b/assets/sass/components/_statistics.scss
@@ -92,7 +92,12 @@
         }
       }
       &:hover .slider > span {
-        //transform: scale(1.1);
+        @include browser-hack(ie10-11) {
+          transform: scale(1.1);
+        }
+        @media (hover: hover) {
+          transform: scale(1.1);
+        }
       }
 
       .legend {
