Disallows user-select and pointer-events for backdrop and portrait

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -35,6 +35,8 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    pointer-events: none;
+    @include vendor('user-select', 'none');
 
     img {
       width: auto;
