--- a/assets/sass/layout/_backdrop.scss
+++ b/assets/sass/layout/_backdrop.scss
@@ -9,10 +9,7 @@
   box-sizing: content-box;
   z-index: -1;
   pointer-events: none;
-  user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
+  @include vendor('user-select', 'none');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
