--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -32,6 +32,7 @@
   }
 
   #portrait {
+    position: relative;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -45,6 +46,17 @@
       max-width: 100%;
       margin-left: 50%;
       @include vendor('transform', 'translateX(-50%)');
+    }
+
+    // Overlay to prevent any clicking/downloading the img
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
     }
 
     @media screen and (orientation:landscape) and (max-width:800px) {
