Fixes wrong header sizing

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -79,7 +79,7 @@
     }
     // Prevent large open area on phone
     @media screen and (max-aspect-ratio: 1/2) { // Or 8/16
-      min-height: calc(100% * 2 - 4.25rem);
+      min-height: calc(100vw * 2 - 4.25rem);
     }
     @media screen and (orientation: portrait) and (min-height: 1025px) and (max-width: nth(map-get($breakpoints, 'small'), 2)) {
       min-height: calc(1025px - 4.25rem);
