--- a/templates/imports/assets/noscript.min.css.html
+++ b/templates/imports/assets/noscript.min.css.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="/assets/css/noscript.min.css?4236606c5270e35d188f122679e9e2d9"/>
+<link rel="stylesheet" href="assets/css/noscript.min.css?4236606c5270e35d188f122679e9e2d9"/>
